# Aether

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt
base/kernel/: fetch-cachyos-patches.sh
base/kernel/config/: alderlake.config  base.config  modules.config  x86-64-v3.config
base/scripts/: bat.sh  config-system.sh  eza.sh  fd.sh  iwd.sh  kernel.sh  llvm.sh  rg.sh  systemd.sh
config/: kernel.config  ld.so.conf  ld.so.config  llvm-libc.conf
config/cmdline/: debug.conf  default.conf
config/firmware/: manifest.txt
config/fish/: config.fish
config/grub/: grub.cfg
config/loader/: loader.conf
config/loader/entries/: aether-fallback.conf  aether.conf
config/mkinitcpio/: aether.conf
config/system/: fstab  hosts
config/uki/: debug.conf  default.conf  fallback.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  DEVELOPING_NATIVE_DRIVERS.md  LCL_DESIGN.md  NATIVE_DRIVER_MODEL.md  PACKAGING.md  build-pipeline.md
docs/architecture/: README.md  layer-1-boot.md  layer-2-kernel.md  layer-3-init.md  layer-4-libraries-toolchain.md  layer-5-package-manager.md
include/: capability.hpp  gateway.hpp  hal.hpp  iommu.hpp  ipc.hpp  kernel.hpp  logger.hpp  scheduler.hpp  vmm.hpp
include/services/: echo.hpp
lfs/base/: CMakeLists.txt  build-gcc.sh  build-grub.sh  build-linux-kernel.sh  build-network.sh
lfs/scripts/: enter-chroot.sh
lfs/temporary/: CMakeLists.txt  build-bash.sh  build-coreutils.sh  build-gzip.sh  build-m4.sh  build-make.sh  build-ncurses.sh  build-sed.sh  build-tar.sh  build-xz.sh
lfs/toolchain/: CMakeLists.txt  build-binutils-pass1.sh  build-binutils-pass2.sh  build-gcc-pass1.sh  build-gcc-pass2.sh  build-glibc.sh  build-linux-headers.sh
scripts/: env.sh  setup-dirs.sh
src/: capability.cpp  gateway.cpp  hal.cpp  iommu.cpp  ipc.cpp  kernel_main.cpp  logger.cpp  main.cpp  scheduler.cpp  vmm.cpp
src/arch/x86_64/: iommu_backend.cpp
src/boot/: entry.asm
src/services/: echo.cpp
temporary/: CMakeLists.txt
temporary/scripts/: dash.sh  fish.sh  m4.sh  mold.sh  ncurses.sh  uutils.sh
tests/: CMakeLists.txt  test_runner.cpp
toolchain/: CMakeLists.txt  env.sh
toolchain/scripts/: 01-linux-headers.sh  02-glibc-stage1.sh  02-glibc.sh  03-compiler-rt.sh  03-llvm-libc.sh  04-libunwind.sh  05-libcxxabi.sh  06-libcxx.sh  07-lld.sh
